Fix CV link path in index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </p>
                     <div class="hero-cta">
                         <a href="#research" class="btn btn-primary">View My Research</a>
-                        <a href="cv/Alex_Carroll_CV_MIT.pdf" download class="btn btn-primary"><i class="fas fa-download"></i> Download CV</a>
+                        <a href="CV/Alex_Carroll_CV_MIT.pdf" download class="btn btn-primary"><i class="fas fa-download"></i> Download CV</a>
                         <a href="#contact" class="btn btn-primary">Get in Touch</a>
                     </div>
                     <div class="hero-social">
